--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Web Design in 4 minutes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
 <body>
+<main>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+</main>
 </body>
 </html>
